# dpll

./: .ginignore  ChangeLog.md  DPLL.cabal  Dpll.hs  DpllCli.hs  Example.cnf  IntDpll.hs  LICENCE  Parser.hs  README.md  _Dpll.hsplay
