name: DPLL
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-2
x-last-ide-version: HfM1.6.1

executable DPLL
    main-is: Dpll.hs
    build-depends:
        base -any
    default-language: Haskell2010
    other-modules:
        Dpll

